--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ function generateQuiz(questions, quizContainer, resultsContainer, submitButton){
     }
 
    
-    resultsContainer.innerHTML = numCorrect + ' out of ' + questions.length;
+    resultsContainer.innerHTML = numCorrect + ' 2 out of 2' + questions.length;
   }
 
 
