--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ var myQuestions = [
     answers: {
       A: '3rd June 2004',
       B: '2nd December 2016',
-      c: '15th April 2003'
+      C: '15th April 2003'
     },
     correctAnswer: 'B'
   },
@@ -28,11 +28,11 @@ var myQuestions = [
  {
   question: "What is Ariels fish name?",
   answers: {
-      A: 'Sebastian',
+      A: 'Flounder',
       B: 'Ursula',
-      C: 'Flounder'
+      C: 'Sebastian'
     },
-    correctAnswer: 'C'
+    correctAnswer: 'A'
   },
 ];
 
